--- a/_notebooks/Homework/2024-10-09-unit_3-homework.ipynb
+++ b/_notebooks/Homework/2024-10-09-unit_3-homework.ipynb
@@ -29,7 +29,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -83,7 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "String myName = Alisha;\n",
@@ -103,7 +111,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +162,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -226,7 +242,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -276,7 +296,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -328,7 +352,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "function checkMembershipEligibility() {\n",
@@ -398,7 +426,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -475,14 +507,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Would the sharons house and my house be the same?"
+    "Would the sharons house and my house be the same?\n",
+    "\n",
+    "**Yes**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
     "class House {\n",
     "    private String color;\n",
@@ -512,7 +558,208 @@
     "        // Correct comparison using equals()\n",
     "        System.out.println(myHouse.equals(sharonsHouse));  // This should return true\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework: Membership Recommendation System\n",
+    "\n",
+    "## Problem Overview\n",
+    "\n",
+    "You are building a membership recommendation system for a fictional company called **\"Prime Club.\"** This system will suggest the most suitable membership tier (or tiers) for a user based on their age, annual income, student status, and employment type. There are 4 types of memberships:\n",
+    "\n",
+    "### Membership Types\n",
+    "\n",
+    "1. **Basic Membership:**\n",
+    "   - **Requirements:**\n",
+    "     - Age ≥ 18\n",
+    "     - Annual income ≥ $20,000\n",
+    "\n",
+    "2. **Premium Membership:**\n",
+    "   - **Requirements:**\n",
+    "     - Age ≥ 25\n",
+    "     - Annual income ≥ $50,000\n",
+    "\n",
+    "3. **Student Discount:**\n",
+    "   - **Requirements:**\n",
+    "     - Must be a student.\n",
+    "\n",
+    "4. **Senior Discount:**\n",
+    "   - **Requirements:**\n",
+    "     - Age ≥ 65\n",
+    "\n",
+    "## Task Description\n",
+    "\n",
+    "Using conditional statements, Boolean expressions, and comparison techniques you’ve learned, write a Java program that:\n",
+    "\n",
+    "1. Prompts the user to input the following:\n",
+    "   - Age (as an integer)\n",
+    "   - Annual income (as a double)\n",
+    "   - Student status (yes or no)\n",
+    "   - Employment type (full-time, part-time, unemployed)\n",
+    "\n",
+    "2. Based on these inputs, your program should print out all membership tiers and discounts the user qualifies for. If the user does not qualify for any membership or discount, the program should print:  \n",
+    "   **\"You do not qualify for any memberships or discounts.\"**\n",
+    "\n",
+    "## Additional Challenge\n",
+    "\n",
+    "Add a final recommendation where your program prioritizes the **\"best\" membership** for the user if they qualify for multiple memberships (use an `else-if` structure).\n",
+    "\n",
+    "The best membership should be decided based on the following priorities:\n",
+    "1. **Premium Membership** (highest priority)\n",
+    "2. **Senior Discount**\n",
+    "3. **Student Discount**\n",
+    "4. **Basic Membership** (lowest priority)\n",
+    "\n",
+    "<details>\n",
+    "<summary><strong>Hints</strong> (click to reveal)</summary>\n",
+    "\n",
+    "1. **Input Validation:**\n",
+    "   - Ensure that age is a positive integer, and annual income is a positive double.\n",
+    "   - Student status input should be case-insensitive (\"yes\" or \"no\").\n",
+    "   - Employment type should be one of: \"full-time\", \"part-time\", or \"unemployed.\"\n",
+    "\n",
+    "2. **Conditions to Consider:**\n",
+    "   - Use `if-else` statements to check for membership qualifications.\n",
+    "   - Remember to handle multiple conditions where a user qualifies for more than one membership.\n",
+    "\n",
+    "3. **Recommendation Logic:**\n",
+    "   - Use `else-if` statements to prioritize the memberships based on the provided hierarchy.\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "## Constraints\n",
+    "\n",
+    "- Age must be a positive integer.\n",
+    "- Annual income must be a positive double.\n",
+    "- Student status should only accept \"yes\" or \"no\" (case-insensitive).\n",
+    "- Employment type should be one of: \"full-time\", \"part-time\", or \"unemployed.\"\n",
+    "\n",
+    "Senior Discount:\n",
+    "\n",
+    "Requirements:\n",
+    "Age ≥ 65\n",
+    "Task Description:\n",
+    "Using conditional statements, Boolean expressions, and comparison techniques you’ve learned, write a Java program that:\n",
+    "\n",
+    "Prompts the user to input the following:\n",
+    "\n",
+    "Age (as an integer)\n",
+    "Annual income (as a double)\n",
+    "Student status (yes or no)\n",
+    "Employment type (full-time, part-time, unemployed)\n",
+    "Based on these inputs, your program should print out all membership tiers and discounts the user qualifies for. If the user does not qualify for any membership or discount, the program should print out: \"You do not qualify for any memberships or discounts.\"\n",
+    "\n",
+    "Additional Challenge: Add a final recommendation where your program prioritizes the \"best\" membership for the user if they qualify for multiple memberships (use an else-if structure).\n",
+    "\n",
+    "The best membership should be decided based on the following priorities:\n",
+    "Premium Membership (highest priority)\n",
+    "Senior Discount\n",
+    "Student Discount\n",
+    "Basic Membership (lowest priority)\n",
+    "Constraints:\n",
+    "Age must be a positive integer.\n",
+    "Annual income must be a positive double.\n",
+    "Student status should only accept \"yes\" or \"no\" (case-insensitive).\n",
+    "Employment type should be one of: \"full-time\", \"part-time\", or \"unemployed.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: Enter your annual income: Are you a student? (yes/no): Enter your employment type (full-time, part-time, unemployed): \n",
+      "You qualify for the following memberships/discounts:\n",
+      "Student Discount\n",
+      "\n",
+      "Best Membership Recommendation:\n",
+      "We recommend the Student Discount.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class MembershipRecommendation {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "        // Prompt user input\n",
+    "        System.out.print(\"Enter your age: \");\n",
+    "        int age = scanner.nextInt();\n",
+    "\n",
+    "        System.out.print(\"Enter your annual income: \");\n",
+    "        double income = scanner.nextDouble();\n",
+    "\n",
+    "        System.out.print(\"Are you a student? (yes/no): \");\n",
+    "        String studentStatus = scanner.next().trim().toLowerCase();\n",
+    "\n",
+    "        System.out.print(\"Enter your employment type (full-time, part-time, unemployed): \");\n",
+    "        String employmentType = scanner.next().trim().toLowerCase();\n",
+    "\n",
+    "        // Input validation for age and income\n",
+    "        if (age <= 0 || income < 0) {\n",
+    "            System.out.println(\"Invalid input: Age must be positive and income must be non-negative.\");\n",
+    "            return;\n",
+    "        }\n",
+    "\n",
+    "        // Membership qualification logic\n",
+    "        boolean qualifiesForBasic = (age >= 18 && income >= 20000);\n",
+    "        boolean qualifiesForPremium = (age >= 25 && income >= 50000);\n",
+    "        boolean qualifiesForStudent = studentStatus.equals(\"yes\");\n",
+    "        boolean qualifiesForSenior = (age >= 65);\n",
+    "\n",
+    "        // Print out all possible memberships\n",
+    "        System.out.println(\"\\nYou qualify for the following memberships/discounts:\");\n",
+    "        if (qualifiesForPremium) {\n",
+    "            System.out.println(\"Premium Membership\");\n",
+    "        }\n",
+    "        if (qualifiesForSenior) {\n",
+    "            System.out.println(\"Senior Discount\");\n",
+    "        }\n",
+    "        if (qualifiesForStudent) {\n",
+    "            System.out.println(\"Student Discount\");\n",
+    "        }\n",
+    "        if (qualifiesForBasic && !qualifiesForPremium) {  // Basic only if Premium is not available\n",
+    "            System.out.println(\"Basic Membership\");\n",
+    "        }\n",
+    "        \n",
+    "        if (!qualifiesForBasic && !qualifiesForPremium && !qualifiesForStudent && !qualifiesForSenior) {\n",
+    "            System.out.println(\"You do not qualify for any memberships or discounts.\");\n",
+    "        }\n",
+    "\n",
+    "        // Best membership recommendation\n",
+    "        System.out.println(\"\\nBest Membership Recommendation:\");\n",
+    "        if (qualifiesForPremium) {\n",
+    "            System.out.println(\"We recommend the Premium Membership.\");\n",
+    "        } else if (qualifiesForSenior) {\n",
+    "            System.out.println(\"We recommend the Senior Discount.\");\n",
+    "        } else if (qualifiesForStudent) {\n",
+    "            System.out.println(\"We recommend the Student Discount.\");\n",
+    "        } else if (qualifiesForBasic) {\n",
+    "            System.out.println(\"We recommend the Basic Membership.\");\n",
+    "        } else {\n",
+    "            System.out.println(\"Unfortunately, you do not qualify for any memberships.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "MembershipRecommendation.main(null);"
    ]
   }
  ],
@@ -526,7 +773,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
