--- a/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
+++ b/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
@@ -367,6 +367,108 @@
    "source": [
     "The answer is D because the code prints out all values starting from 3 and ending at 12 because it is inclusive. Therefore, since the output is the i value and then a space, it print all numbers from 3-12 inclusive separated by spaces."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bonus:\n",
+    "- Explain the difference between using a variable like i inside a for loop, vs. using a variable that exists in the code itself for a while loop\n",
+    "\n",
+    "A variable such as i in a for loop is initialized at teh start, but a while loop uses an external variable outside of the loop to increment itself. This makes while loops more dynamic than for loops since it can continue until an unpredictable condition is met."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2:\n",
+    "How many times does the following method print a \"*\" ?\n",
+    "\n",
+    "A. 9\n",
+    "\n",
+    "B. 7\n",
+    "\n",
+    "C. 8\n",
+    "\n",
+    "D. 6\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal answer:</summary> \n",
+    "  C\n",
+    "</details>\n",
+    "\n",
+    "Explain your answer. (explanation is graded not answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (int i = 3; i < 11; i++) {\n",
+    "    System.out.print(\"*\");\n",
+    " }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The program prints 8 asterisks because it starts at 3 until it reaches 10, therefore the program prints all integers from 3-10. This means that 8 values will be printed because there is a total of 8 iterations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3:\n",
+    "What does the following code print?\n",
+    "\n",
+    "A. -4 -3 -2 -1 0\n",
+    "\n",
+    "B. -5 -4 -3 -2 -1\n",
+    "\n",
+    "C. 5 4 3 2 1\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal answer:</summary> \n",
+    "  A\n",
+    "</details>\n",
+    "\n",
+    "Explain your answer. (explanation is graded not answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4 -3 -2 -1 0 "
+     ]
+    }
+   ],
+   "source": [
+    "int x = -5;\n",
+    "while (x < 0)\n",
+    "{\n",
+    "   x++;\n",
+    "   System.out.print(x + \" \");\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
