ideation so far

--- a/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
+++ b/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
@@ -469,6 +469,341 @@
     "   System.out.print(x + \" \");\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The answer is A because the code checks if x is still under 0, increments, and then prints. This results in the first value being -4 (-5 + 1) and then the last element being 0 since -1 is the last number that satisfies the while loop condition but then -1 is added by 1 before printing so the output is 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4:\n",
+    "What does the following code print?\n",
+    "\n",
+    "A. 20\n",
+    "\n",
+    "B. 21\n",
+    "\n",
+    "C. 25\n",
+    "\n",
+    "D. 30\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal answer:</summary> \n",
+    "  B\n",
+    "</details>\n",
+    "\n",
+    "Explain your answer. (explanation is graded not answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int sum = 0;\n",
+    "\n",
+    "for (int i = 1; i <= 5; i++) {\n",
+    "    if (i % 2 == 0) {\n",
+    "        sum += i * 2;\n",
+    "    } else {\n",
+    "        sum += i;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "System.out.println(sum);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the 5 iterations, this is what happens to the value of sum:\n",
+    "1. 1 is not even, so sum += 1 --> sum = 1\n",
+    "2. 2 is even, so sum += 2*2 --> sum = 5\n",
+    "3. 3 is not even, so sum += 3 --> sum = 8\n",
+    "4. 4 is even, so sum += 4*2 --> sum = 16\n",
+    "5. 5 is not even, so sum += 5 --> sum = 21"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops HW Hack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Easy Hack\n",
+    "- Use a while loop to find the numbers from 1-50 that are divisible by 3 or 5, then store them into a list (make sure to print it out at the end)\n",
+    "- Use a for loop to do the same thing detailed above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers divisible by 3 or 5 (while loop): [3, 5, 6, 9, 10, 12, 15, 18, 20, 21, 24, 25, 27, 30, 33, 35, 36, 39, 40, 42, 45, 48, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "//While loop\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        ArrayList<Integer> divisibleNumbers = new ArrayList<>();\n",
+    "        int i = 1;\n",
+    "\n",
+    "        while (i <= 50) {\n",
+    "            if (i % 3 == 0 || i % 5 == 0) {\n",
+    "                divisibleNumbers.add(i);\n",
+    "            }\n",
+    "            i++;\n",
+    "        }\n",
+    "        System.out.println(\"Numbers divisible by 3 or 5 (while loop): \" + divisibleNumbers);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers divisible by 3 or 5 (for loop): [3, 5, 6, 9, 10, 12, 15, 18, 20, 21, 24, 25, 27, 30, 33, 35, 36, 39, 40, 42, 45, 48, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "//For loop\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        ArrayList<Integer> divisibleNumbers = new ArrayList<>();\n",
+    "\n",
+    "        for (int i = 1; i <= 50; i++) {\n",
+    "            if (i % 3 == 0 || i % 5 == 0) {\n",
+    "                divisibleNumbers.add(i);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"Numbers divisible by 3 or 5 (for loop): \" + divisibleNumbers);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Harder Hack\n",
+    "#### Palindromes are numbers that have the same value when reversed (ex: “123321” or “323”). Create a program that uses a while loop that outputs all palindromes in any given list. \n",
+    "\n",
+    "Sample Input: \n",
+    "test_list = [5672, 235, 5537, 6032, 317, 8460, 1672, 8104, 7770, 4442, 913, 2508, 1116, 9969, 9091, 522, 8756, 9527, 7968, 1520, 4444, 515, 2882, 6556, 595]\n",
+    "\n",
+    "Sample Output:\n",
+    "4444, 515, 2882, 6556, 595"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindromes: [4444, 515, 2882, 6556, 595]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] testList = {5672, 235, 5537, 6032, 317, 8460, 1672, 8104, 7770, \n",
+    "                          4442, 913, 2508, 1116, 9969, 9091, 522, 8756, \n",
+    "                          9527, 7968, 1520, 4444, 515, 2882, 6556, 595};\n",
+    "\n",
+    "        ArrayList<Integer> palindromes = new ArrayList<>();\n",
+    "        int index = 0;\n",
+    "\n",
+    "        while (index < testList.length) {\n",
+    "            if (isPalindrome(testList[index])) {\n",
+    "                palindromes.add(testList[index]);\n",
+    "            }\n",
+    "            index++;\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"Palindromes: \" + palindromes);\n",
+    "    }\n",
+    "\n",
+    "    // Helper method to check if a number is a palindrome\n",
+    "    private static boolean isPalindrome(int num) {\n",
+    "        String str = Integer.toString(num);\n",
+    "        int start = 0;\n",
+    "        int end = str.length() - 1;\n",
+    "\n",
+    "        while (start < end) {\n",
+    "            if (str.charAt(start) != str.charAt(end)) {\n",
+    "                return false;\n",
+    "            }\n",
+    "            start++;\n",
+    "            end--;\n",
+    "        }\n",
+    "        return true;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Hack (for above 0.9)\n",
+    "### Use a for loop to output a spiral matrix with size n\n",
+    "Example:\n",
+    "\n",
+    "Sample Input: n = 3\n",
+    "\n",
+    "Output: [[1, 2, 3], [8, 9, 4], [7, 6, 5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter The Value For N:\n",
+      "Spiral Matrix:\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[16, 17, 18, 19, 6]\n",
+      "[15, 24, 25, 20, 7]\n",
+      "[14, 23, 22, 21, 8]\n",
+      "[13, 12, 11, 10, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String args[]) {\n",
+    "        System.out.println(\"Enter The Value For N:\");\n",
+    "         \n",
+    "        Scanner input = new Scanner(System.in);\n",
+    "        int n = input.nextInt();\n",
+    "         \n",
+    "        int[][] spiral = new int[n][n];\n",
+    "        int value = 1;\n",
+    "         \n",
+    "        int minCol = 0;\n",
+    "        int maxCol = n - 1;\n",
+    "        int minRow = 0;\n",
+    "        int maxRow = n - 1;\n",
+    "         \n",
+    "        while (value <= n * n) {\n",
+    "            for (int i = minCol; i <= maxCol; i++) {\n",
+    "                spiral[minRow][i] = value;\n",
+    "                value++;\n",
+    "            }\n",
+    "             \n",
+    "            for (int i = minRow + 1; i <= maxRow; i++) { \n",
+    "                spiral[i][maxCol] = value; \n",
+    "                value++; \n",
+    "            }\n",
+    "             \n",
+    "            if (minRow < maxRow) {\n",
+    "                for (int i = maxCol - 1; i >= minCol; i--) {\n",
+    "                    spiral[maxRow][i] = value;\n",
+    "                    value++;\n",
+    "                }\n",
+    "            }\n",
+    "             \n",
+    "            if (minCol < maxCol) {\n",
+    "                for (int i = maxRow - 1; i >= minRow + 1; i--) {\n",
+    "                    spiral[i][minCol] = value;\n",
+    "                    value++;\n",
+    "                }\n",
+    "            }\n",
+    "             \n",
+    "            minCol++;\n",
+    "            minRow++;\n",
+    "            maxCol--;\n",
+    "            maxRow--;\n",
+    "        }\n",
+    "         \n",
+    "        System.out.println(\"Spiral Matrix:\");\n",
+    "        for (int i = 0; i < spiral.length; i++) {\n",
+    "            System.out.print(\"[\");\n",
+    "            for (int j = 0; j < spiral[i].length; j++) {\n",
+    "                System.out.print(spiral[i][j]);\n",
+    "                if (j < spiral[i].length - 1) {\n",
+    "                    System.out.print(\", \");\n",
+    "                }\n",
+    "            }\n",
+    "            System.out.println(\"]\");\n",
+    "        }\n",
+    "        \n",
+    "        input.close();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);\n"
+   ]
   }
  ],
  "metadata": {
