--- a/_notebooks/Homework/2024-10-03-unit_7-homework.ipynb
+++ b/_notebooks/Homework/2024-10-03-unit_7-homework.ipynb
@@ -13,7 +13,7 @@
     "toc: True\n",
     "title: Unit 6 Homework\n",
     "courses: {'csa': {'week': 6}}\n",
-    "type: ccc\n",
+    "type: collab\n",
     "categories: [AP CSA]\n",
     "author: Trevor Huang\n",
     "---"
