--- a/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
+++ b/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
@@ -13,7 +13,7 @@
     "toc: True\n",
     "title: Unit 2 Homework\n",
     "courses: {'csa': {'week': 4}}\n",
-    "type: ccc\n",
+    "type: collab\n",
     "categories: [AP CSA]\n",
     "author: Trevor Huang\n",
     "---"
