--- a/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
+++ b/_notebooks/Homework/2024-10-09-unit_4-homework.ipynb
@@ -1,21 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
-     "languageId": "java"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
     "---\n",
     "layout: post\n",
     "toc: True\n",
     "title: Unit 4 Homework\n",
     "courses: {'csa': {'week': 7}}\n",
-    "type: ccc\n",
+    "type: collab\n",
     "categories: [AP CSA]\n",
     "author: Trevor Huang\n",
     "---"
@@ -32,11 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -69,11 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -142,11 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -206,11 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//Hint: Check the Syntax and look at the equals to signs on the example above\n",
@@ -243,11 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -349,11 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (int i = 3; i <= 12; i++) {\n",
@@ -404,11 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for (int i = 3; i < 11; i++) {\n",
@@ -447,11 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -503,11 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int sum = 0;\n",
@@ -554,11 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -593,11 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -645,11 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -717,11 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -816,7 +762,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
