--- a/_notebooks/Foundation/_tangibles/2024-10-09-spring-2-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-spring-2-review.ipynb
@@ -16,13 +16,17 @@
     "description: A comprehensive review of what I've learned in Sprint 2 of AP Computer Science A\n",
     "type: collab\n",
     "courses: { csa: {week: 7} }\n",
+    "permalink: /csa/sprint2/intro/\n",
+    "menu: nav/CSA_Units/summary.html\n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Summaries of Units"
+   ]
   }
  ],
  "metadata": {
