--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_2-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_2-review.ipynb
@@ -28,7 +28,9 @@
     }
    },
    "source": [
-    "## Hi"
+    "## Overview: Using Objects (5-7.5%)\n",
+    "- Objects are instances of a class that are created to use attributes and methods of class. \n",
+    "- Think of "
    ]
   }
  ],
